✨ Add sorting to patients and orders

--- a/src/pages/Login/styles.scss
+++ b/src/pages/Login/styles.scss
@@ -2,9 +2,13 @@
   background-color: white;
   width: 40%;
   max-width: 400px;
-  padding: 80px 64px 16px 64px;
+  padding: 32px 48px 16px 48px;
   position: absolute;
   left: 50%;
   top: 40%;
   transform: translate(-50%, -50%);
+  .logo-wrapper {
+    margin-bottom: 32px;
+    text-align: center;
+  }
 }
