--- a/src/shared/components/Search.scss
+++ b/src/shared/components/Search.scss
@@ -1,12 +1,51 @@
+// .search-container {
+//   color: rgba(66, 82, 110, 0.75);
+//   background-color: rgb(225, 227, 233);
+//   .ant-input-group-wrapper {
+//     .ant-input {
+//       background-color: inherit;
+//       &:not(:focus):not(:hover) {
+//         border-color: transparent;
+//       }
+//     }
+//     .ant-input-group-addon {
+//       padding: 0;
+//       border: 0;
+//       background-color: inherit;
+//       > * {
+//         border: 0;
+//       }
+//       .ant-btn {
+//         color: rgba(66, 82, 110, 0.85);
+//         background-color: rgb(225, 227, 233);
+//       }
+//     }
+//   }
+// }
+
 .search-container {
-  .ant-input {
-    border: 1px solid transparent;
+  color: rgba(66, 82, 110, 1);
+  background-color: rgb(225, 227, 233);
+  .anticon-search {
+    color: inherit;
   }
-  .ant-input-group-addon {
-    padding: 0;
-    border: 0;
-    > * {
-      border: 0;
-    }
-  }
+  // .ant-input-group-wrapper {
+  //   // .ant-input {
+  //   //   background-color: inherit;
+  //   //   &:not(:focus):not(:hover) {
+  //   //     border-color: transparent;
+  //   //   }
+  //   // }
+  //   .ant-input-group-addon {
+  //     padding: 0;
+  //     border: 0;
+  //     background-color: inherit;
+  //     > * {
+  //       border: 0;
+  //     }
+  //     .ant-btn {
+  //       background-color: rgb(225, 227, 233);
+  //     }
+  //   }
+  // }
 }
