--- a/src/index.scss
+++ b/src/index.scss
@@ -12,7 +12,7 @@ code {
 
 #root {
   height: 100%;
-  background-color: #f0f2f5;
+  background-color: #fbfbfc;
 }
 
 .right-align {
@@ -59,5 +59,17 @@ code {
 }
 
 input:-webkit-autofill {
-  background-clip: text;
+  transition-delay: 3600s;
+}
+
+.ant-table {
+  background-color: inherit !important;
+  .ant-table-thead {
+    th {
+      background-color: inherit;
+    }
+  }
+  tbody {
+    background-color: white;
+  }
 }
