--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -1,6 +1,8 @@
 .home {
   display: grid;
-  grid-template-columns: 60% auto;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 16px;
+  height: 100%;
   .ant-card {
     background-color: inherit;
     .ant-card-head {
