🎨 Change primary color to green

--- a/src/App.less
+++ b/src/App.less
@@ -42,3 +42,10 @@
     transform: rotate(360deg);
   }
 }
+
+a,
+.ant-btn.ant-btn-link,
+.ant-btn-background-ghost.ant-btn-primary {
+  color: darken(#00cc83, 5%);
+  font-weight: 600;
+}
