🎨 Use antd variable wherever possible

--- a/src/App.less
+++ b/src/App.less
@@ -4,48 +4,38 @@
   height: 100%;
 }
 
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 a,
 .ant-btn.ant-btn-link,
 .ant-btn-background-ghost.ant-btn-primary {
   color: darken(#00cc83, 5%);
   font-weight: 600;
+}
+
+.ant-card.ant-card-small {
+  > .ant-card-head {
+    padding: 0; // @card-head-padding is for title
+    min-height: 32px;
+  }
+
+  .ant-card-body {
+    padding: 16px;
+    > .ant-list.ant-list-sm.ant-list-bordered {
+      margin-top: -12px;
+      border: 1px solid transparent;
+      .ant-list-item {
+        padding-left: 0;
+        padding-right: 0;
+      }
+    }
+  }
+}
+
+.ant-form-item-explain {
+  font-size: 12px !important;
+}
+
+.row-clickable {
+  .ant-table tbody tr {
+    cursor: pointer;
+  }
 }
